# Serverless-Function-Execution

./: .gitignore  README.md  cleanup.fish  pyproject.toml  requirements.txt  test_docker.py
api/: container_pool.py  crud.py  database.py  execution.py  init_db.py  main.py  metrics.py  models.py
containers/: firecracker_config.json  js-base.Dockerfile  python-base.Dockerfile
frontend/: app.py
tests/: test_api.py
